samples/_failures_safe/1761162061_81cdd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66bb532a.c: In function ‘main’:
./samples/SAFE/__tmp_66bb532a.c:161:33: error: missing terminating " character
  161 |                 fprintf(stderr, "Invalid start node\n
      |                                 ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_66bb532a.c:161:17: error: expected expression at end of input
  161 |                 fprintf(stderr, "Invalid start node\n
      |                 ^~~~~~~
./samples/SAFE/__tmp_66bb532a.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66bb532a.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66bb532a.c:161:17: error: expected declaration or statement at end of input
